Add Forget and Reset password endpoints
